--- a/backoffice.html
+++ b/backoffice.html
@@ -45,7 +45,7 @@
     <main>
         <h6 class="m-4">BACKOFFICE PAGE</h6>
         <form class="mb-5">
-            <h5 class="my-4 ms-3 text-success display-6 text-center">Create new product</h5>
+            <h5 id="title" class="my-4 ms-3 text-success display-6 text-center">Create new product</h5>
             <div class="container  col-md-4 border rounded p-3">
                 <div class="d-flex justify-content-end">
                     <p class="text-danger">*</p><span class="ps-2 text-secondary">= required</span>
@@ -72,12 +72,15 @@
                         <input type="text" class="form-control" id="product-img" placeholder="https://..." required>
                     </div>
                     <div class="mb-3">
-                        <label for="product-name" class="form-label">Price</label>
+                        <label for="product-price" class="form-label">Price</label>
                         <span class="text-danger">*</span>
-                        <input type="number" class="form-control" id="product-name" required>
+                        <input type="number" class="form-control" id="product-price" required>
                     </div>
                     <div class="d-flex justify-content-between gy-2">
-                        <button type="submit" class="btn btn-success col-3">Save</button>
+                        <div>
+                        <button type="submit" class="btn btn-success col">Create</button>
+                        <button type="button" class="btn btn-outline-secondary col">Edit</button>
+                    </div>
                         <button type="button" class="btn btn-outline-danger col-2">Delete</button>
                     </div>
                 </div>
@@ -85,9 +88,11 @@
         </form>
     </main>
 </body>
-<footer class="bg-success text-white p-1" >
+<footer class="position-relative bottom-0">
+    <div class="bg-success text-white p-2 position-sticky bottom-0 end-0">
     created by : Melquisedic Recalde
-</footer>
+    </div>
+  </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
